syntax = "proto3";
package greeter;
option go_package = "/greeter";
import "google/protobuf/timestamp.proto";
option java_package = "com.jewel.meta.asset_platform.proto.greeter_service";
option java_outer_classname = "GreeterServiceProtocol";
import "validate/validate.proto";
service GreeterService {
  rpc SayHelloWord(HelloRequest)returns (HelloReply) {}
  rpc SayStream(stream HelloRequest)returns(stream HelloReply){}
  rpc SayStream1(stream HelloRequest)returns(HelloReply){}
  rpc SayStream2(HelloRequest)returns(stream HelloReply){}
}
message HelloRequest {
  string name = 1;
}
message HelloReply {
  //用户编号
  // @inject_tag: validate:"required,max=32"
  string message = 1 [(validate.rules).string.len = 5];

  google.protobuf.Timestamp time = 2;

}